--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,52 +1,154 @@
-<table width="100%">
-  <tr>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Inbox</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Commons</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </td>
-    <td valign="top">
-      <ul>
-        <li><a href="#">Notification</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">ePortfolios</a></li>
-        <li><a href="#">Shared Content</a></li>
-        <li><a href="#">The Hub</a></li>
-        <li><a href="#">Qwickly Course Tools</a></li>
-        <li><a href="#">Global Announcements</a></li>
-      </ul>
-    </td>
-    <td valign="top">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="../../Courses/Home/index.css">
+<link rel="stylesheet" href="./index.css">
+<script src="../../Courses/Home/index.js"></script>
+
+<div>
+
+  <div class="row" id="topBar">
+    <div class="col-1 logo"></div>
+    <div class="col-1"></div>
+    <div class="col-1" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
+      <i class="fas fa-bars fa-2x" style="color: red;"></i>
+    </div>
+    <div class="col-1"></div>
+    <div class="col-5" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
       Jose Annunziato's Profile
-      <hr />
-      <table width="100%">
-      <tr>
-        <td>
-          <h2>Jose Annunziato</h2>
-          <h2>Contact</h2>
-          <p>No registered services, you can add some on the settings page.</p>
-          <h2>Biography</h2>
-          <p>Faculty, Software Engineer, AI, Space, and renewables enthusiast</p>
-          <h2>Links</h2>
-          <a href="#">Youtube</a>
-        </td>
-        <td valign="top">
-          <button><a href="/Kanbas/Account/Profile/EditProfile/screen.html" style="text-decoration: none;">Edit Profile</a></button>
-        </td>
-      </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+    </div>
+  </div>
+  <div class="row" style="height:10%"></div>
+  <div class="row">
+    <div class="col-1" id="SideBar">
+      <ul class="list-group">
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item ">
+
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x" style="color: white; "></i>
+              <i class="fas fa-user fa-stack-1x" style="color: grey;"></i>
+            </span><br />
+
+            Account
+          </li>
+        </a>
+
+        <a href="../../Courses/Dashboard/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-tachometer-alt fa-3x"></i>
+            Dashboard
+          </li>
+        </a>
+        <a href="../../Courses/Home/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-book fa-3x"></i>
+            Courses
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-calendar fa-3x"></i>
+            Calendar
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-inbox fa-3x"></i>
+        </a>
+        Inbox
+        </li>
+        <li class="list-group-item">
+
+          <a href="#">
+            <i class="fas fa-history fa-3x"></i>
+
+            History
+        </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-tv fa-3x"></i>
+
+            Studio
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-arrow-right fa-3x"></i>
+            Commons
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-question-circle fa-3x"></i>
+
+            Help
+          </li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-1">
+
+    </div>
+    <div class="col-2" id="SubBar">
+      <ul>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Notification</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Profile</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Files</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Settings</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">ePortfolios</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Shared Content</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">The Hub</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Qwickly Course Tools</li>
+        </a>
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item">Global Announcements</li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-5">
+      <div class="row" style="display: flex; justify-content: space-between; align-content: center;">
+        <div class="col-3">
+          <span class="fa-stack fa-big">
+            <i class="fas fa-user fa-stack-1x fa-user-big" style="color: grey;"></i>
+          </span><br />
+        </div>
+        <div class="col-5" style="display: flex; align-items:center;">
+          <a href="./EditProfile/screen.html" style="text-decoration: none;"><button class="btn-primary"
+              style="height:fit-content; color: black;"><i class="fas fa-edit"></i>Edit Profile</button></a>
+        </div>
+      </div>
 
 
+      <h3>Jose Annunziato
+
+      </h3>
+      <h3 class="profileHeader">Contact</h3>
+      <p>No registered services, you can add some on the settings page.</p>
+      <h3 class="profileHeader">Biography</h3>
+      <p>Faculty, Software Engineer, AI, Space, and renewables enthusiast</p>
+      <h3 class="profileHeader">Links</h3>
+      <a href="#" class="link-with-icon" style="color:red;">Youtube <i class="fas fa-arrow-right"></i></a>
+
+
+
+    </div>
+
+  </div>
