--- a/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
+++ b/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
@@ -1,124 +1,306 @@
-<table>
-  <tr>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Inbox</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Commons</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </td>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-        <li><a href="#">Piazza</a></li>
-        <li><a href="#">Zoom Meetings</a></li>
-        <li>
-          <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="../../home/index.css">
+<script src="../../home/index.js"></script>
+
+
+<div>
+
+  <div class="row" id="topBar" style="z-index: 1;">
+    <div class="col-1 logo"></div>
+    <div class="col-1"></div>
+    <div class="col-1" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
+      <i class="fas fa-bars fa-2x" style="color: red;"></i>
+    </div>
+    <div class="col-10" style="display: flex; align-items: center; ">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin-top: 3%;">
+          <li class="breadcrumb-item"><a href="#">CS5610</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Assignments</li>
+          <li class="breadcrumb-item active" aria-current="page">A1 - ENV</li>
+        </ol>
+      </nav>
+    </div>
+
+  </div>
+  <div class="row" style="height:10%"></div>
+  <div class="row">
+    <div class="col-1" id="SideBar">
+      <ul class="list-group">
+        <a href="../../../Account/Profile/screen.html">
+          <li class="list-group-item ">
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x" style="color: white; "></i>
+              <i class="fas fa-user fa-stack-1x" style="color: grey;"></i>
+            </span><br />
+
+            Account
+          </li>
+        </a>
+
+        <a href="../../Dashboard/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-tachometer-alt fa-3x"></i>
+            Dashboard
+          </li>
+        </a>
+        <a href="../../Home/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-book fa-3x"></i>
+            Courses
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-calendar fa-3x"></i>
+            Calendar
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-inbox fa-3x"></i>
+        </a>
+        Inbox
         </li>
-        <li><a href="#">Quizzes</a></li>
-        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-        <li><a href="#">People</a></li>
-        <li><a href="#">Panopto Video</a></li>
-        <li><a href="#">Discussion</a></li>
-        <li><a href="#">Announcements</a></li>
-        <li><a href="#">Pages</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Rubrics</a></li>
-        <li><a href="#">Outcomes</a></li>
-        <li><a href="#">Collaborations</a></li>
-        <li><a href="#">Syllabus</a></li>
-        <li><a href="#">Settings</a></li>
+        <li class="list-group-item">
+
+          <a href="#">
+            <i class="fas fa-history fa-3x"></i>
+
+            History
+        </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-tv fa-3x"></i>
+
+            Studio
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-arrow-right fa-3x"></i>
+            Commons
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-question-circle fa-3x"></i>
+
+            Help
+          </li>
+        </a>
       </ul>
-    </td>
-    <td valign="top">
-      <select>
+    </div>
+    <div class="col-1">
+
+    </div>
+    <div class="col-2" id="SubBarHome">
+      <ul>
+        <a href="../../Home/screen.html">
+          <li class="list-group-item">Home</li>
+        </a>
+        <a href="../../../Courses/Modules/screen.html">
+          <li class="list-group-item">Modules</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Piazza</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Zoom Meetings</li>
+        </a>
+        <a href="../../../Courses/Assignments/screen.html">
+          <li class="list-group-item">
+            Assignments
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Quizzes</li>
+        </a>
+        <a href="../../../Courses/Grades/screen.html">
+          <li class="list-group-item">Grades</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">People</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Panopto Video</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Discussion</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Announcements</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Pages</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Files</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Rubrics</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Outcomes</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Collaborations</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Syllabus</li>
+        </a>
+        <a href="/Kanbas/Courses/Settings/screen.html">
+          <li class="list-group-item">Settings</li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-8">
+      <select class="form-control" style="width:fit-content">
         <option>SpeedGrader</option>
       </select>
       <hr />
-      <h3>Assignment Name</h3>
-      <input
-        type="text"
-        value="Assingment 1 - HTML"
-        id="assignmentName"
-        placeholder="Assignment Name"
-      />
-      <h3>Description</h3>
-      <textarea cols="50" rows="5">
+      <p style="margin:0;">Assignment Name</p>
+      <input type="text" class="form-control" value="Assingment 1 - HTML" id="assignmentName"
+        placeholder="Assignment Name" style="margin-bottom: 20px;" />
+
+      <textarea class="form-control" cols="50" rows="5" style="margin-bottom: 20px;">
         This is the first assignment to build Kanbas
-        </textarea
-      >
+        </textarea>
 
-      <h3>Points</h3>
-      <input value="100" type="number" max="100" min="50" step="5" />
+      <div class="row">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;">Points</div>
+        <div class="col-7" style="display: flex; justify-content: flex-start;"><input class="form-control"
+            placeholder="100"></input></div>
+      </div>
 
-      <h3>Assignment Group</h3>
-     <select>
-      <option>ASSIGNMENTS</option>
-     </select>
+      <div class="row" style="margin-top: 20px;">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;">Assignment Group
+        </div>
+        <div class="col-7" style="display: flex; justify-content: flex-start;">
+          <select class="form-control">
+            <option>ASSIGNMENTS</option>
+          </select>
+        </div>
+      </div>
 
-     <h3>Display Grade as</h3>
-     <select>
-      <option>Percentage</option>
-     </select>
+      <div class="row" style="margin-top: 20px;">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;">Display Grade as
+        </div>
+        <div class="col-7" style="display: flex; justify-content: flex-start;">
+          <select class="form-control">
+            <option>Percentage</option>
+          </select>
+        </div>
+      </div>
 
-     <h3>Submission Type</h3>
-     <select>
-       <option>Text Entry</option>
-       <option>Website URL</option>
-       <option>Media Recordings</option>
-       <option>File Uploads</option>
-     </select>
+      <div class="row" style="margin-top: 20px;">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;"></div>
+        <div class="col-7" style="display: flex; justify-content: flex-start;">
+          <input type="checkbox">
+          Do not count this assignment towards the final grade
+          </input>
+        </div>
+      </div>
 
-      <h3>Online Entry Options</h3>
-      <input type="checkbox" id="textEntry" />
-      <label for="textEntry">Text Entry</label><br />
-      <input type="checkbox" checked /> Website URL <br />
-      <label> <input type="checkbox" /> Media Recordings </label> <br />
-      <input type="checkbox" /> Student Annotation<br />
-      <input type="checkbox" /> File Uploads<br />
+      <div class="row" style="margin-top: 20px;">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;">Submission Type
+        </div>
+        <div class="col-7" style="border:1px solid gray;">
+          <div style="margin: 10px 0;">
+            <select>
+              <option>
+                Online
+              </option>
+            </select>
+          </div>
+          <div style="margin: 10px 0;"><b>Online Entry Options</b></div>
 
-      <h3>Submission Attempts</h3>
-      <select>
-        <option>Unlimited</option>
-        <option>Limited</option>
-      </select>
+          <div style="margin: 10px 0;">
+            <input type="checkbox">
+            Text Entry
+            </input>
+          </div>
 
-      <h3>Plagiarism Review</h3>
-      <select>
-        <option>None</option>
-        <option>Done</option>
-      </select>
+          <div style="margin: 10px 0;">
+            <input type="checkbox">
+            Website URL
+            </input>
+          </div>
 
-      <h3>Group Assignments</h3>
-      <input type="checkbox" id="groupAssignment" />
-      <label for="groupAssignment">This is a group assignment</label><br />
+          <div style="margin: 10px 0;">
+            <input type="checkbox">
+            Media Recordings
+            </input>
 
-      <h3>Peer Reviews</h3>
-      <input type="checkbox" id="peerReviews" />
-      <label for="peerReviews">Require Peer Reviews</label><br />
+          </div>
 
-      <h3>Assign</h3>
-      Assign to <br />
-      <input
-      type="text" value="Everyone"/>
+          <div style="margin: 10px 0;">
+            <input type="checkbox">
+            Student Annotation
+            </input>
+          </div>
 
-      <h3>Due Date</h3>
-      <input type="date" value="2020-09-16" />
 
-      <h3>Available from</h3>
-      <input type="date" value="2020-09-16" />
+          <div style="margin: 10px 0;">
+            <input type="checkbox">
+            File Uploads
+            </input>
+          </div>
 
-      <h3>Until</h3>
-      <input type="date" value="2020-09-16" /> <br />
-      <p></p>
-      <button>Cancel</button><button>Save</button>
-    </td>
-  </tr>
-</table>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 20px;">
+        <div class="col-4" style="display: flex; justify-content: flex-end; align-items: center;">Assign
+        </div>
+        <div class="col-7" style="border:1px solid gray;">
+          <div style="margin:10px 5px;">
+            <label><b>Assign to</b></label>
+            <input class="form-control" placeholder="Everyone"></input>
+          </div>
+
+          <div style="margin:10px 5px;">
+            <label><b>Due</b></label>
+            <input type="date" class="form-control"></input>
+          </div>
+
+          <div class="row" style="margin:10px 0px;">
+            <div class="col-5">
+              <label><b>Available from</b></label>
+              <input type="date" class="form-control"></input>
+            </div>
+            <div class="col-5">
+              <label><b>Until</b></label>
+              <input type="date" class="form-control"></input>
+            </div>
+          </div>
+          <div class="row" style="margin:10px 0px;">
+            <button class="btn btn-secondary">+Add</button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col-5" style="display: flex; justify-content: flex-start; align-items: center;">
+          <input type="checkbox">Notify users that this content has changed</input>
+        </div>
+
+        <div class="col-7" style="display: flex; justify-content: flex-end; align-items: center;">
+          <button class="btn btn-secondary">Cancel</button>
+          <button class="btn btn-danger">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
