--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -1,125 +1,290 @@
-<table width="100%" border="1">
-  <tr>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Inbox</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Commons</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </td>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-        <li><a href="#">Piazza</a></li>
-        <li><a href="#">Zoom Meetings</a></li>
-        <li>
-          <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="../home/index.css">
+<script src="../home/index.js"></script>
+
+
+<div>
+
+  <div class="row" id="topBar" style="z-index: 1;">
+    <div class="col-1 logo"></div>
+    <div class="col-1"></div>
+    <div class="col-1" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
+      <i class="fas fa-bars fa-2x" style="color: red;"></i>
+    </div>
+    <div class="col-10" style="display: flex; align-items: center; ">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin-top: 3%;">
+          <li class="breadcrumb-item"><a href="#">CS5610</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Assignments</li>
+        </ol>
+      </nav>
+    </div>
+
+  </div>
+  <div class="row" style="height:10%"></div>
+  <div class="row">
+    <div class="col-1" id="SideBar">
+      <ul class="list-group">
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item ">
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x" style="color: white; "></i>
+              <i class="fas fa-user fa-stack-1x" style="color: grey;"></i>
+            </span><br />
+
+            Account
+          </li>
+        </a>
+
+        <a href="../Dashboard/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-tachometer-alt fa-3x"></i>
+            Dashboard
+          </li>
+        </a>
+        <a href="../Home/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-book fa-3x"></i>
+            Courses
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-calendar fa-3x"></i>
+            Calendar
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-inbox fa-3x"></i>
+        </a>
+        Inbox
         </li>
-        <li><a href="#">Quizzes</a></li>
-        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-        <li><a href="#">People</a></li>
-        <li><a href="#">Panopto Video</a></li>
-        <li><a href="#">Discussion</a></li>
-        <li><a href="#">Announcements</a></li>
-        <li><a href="#">Pages</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Rubrics</a></li>
-        <li><a href="#">Outcomes</a></li>
-        <li><a href="#">Collaborations</a></li>
-        <li><a href="#">Syllabus</a></li>
-        <li><a href="#">Settings</a></li>
+        <li class="list-group-item">
+
+          <a href="#">
+            <i class="fas fa-history fa-3x"></i>
+
+            History
+        </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-tv fa-3x"></i>
+
+            Studio
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-arrow-right fa-3x"></i>
+            Commons
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-question-circle fa-3x"></i>
+
+            Help
+          </li>
+        </a>
       </ul>
-    </td>
-    <td valign="top">
-      <input placeholder="Search for Assignments"></input>
-      <button>Group</button>
-      <button>Assignment</button>
-      <select>
-        <option>Edit Assignment Dates</option>
-      </select>
+    </div>
+    <div class="col-1">
+
+    </div>
+    <div class="col-2" id="SubBarHome">
+      <ul>
+        <a href="../Home/screen.html">
+          <li class="list-group-item">Home</li>
+        </a>
+        <a href="../../Courses/Modules/screen.html">
+          <li class="list-group-item">Modules</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Piazza</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Zoom Meetings</li>
+        </a>
+        <a href="../../Courses/Assignments/screen.html">
+          <li class="list-group-item">
+            Assignments
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Quizzes</li>
+        </a>
+        <a href="../../Courses/Grades/screen.html">
+          <li class="list-group-item">Grades</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">People</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Panopto Video</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Discussion</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Announcements</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Pages</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Files</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Rubrics</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Outcomes</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Collaborations</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Syllabus</li>
+        </a>
+        <a href="/Kanbas/Courses/Settings/screen.html">
+          <li class="list-group-item">Settings</li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-9">
+      <div class="row" style="display: flex; margin-top: 10px;">
+        <div class="col-2">
+          <input class="form-control" value="Search for assignment" style="width:fit-content;"></input>
+
+        </div>
+        <div class="col-3"></div>
+        <div class="col-7" style="display: flex; justify-content: flex-end;">
+          <button class="btn btn-secondary">+Group</button>
+          <button class="btn btn-danger">+Assignment</button>
+          <button class="btn btn-secondary">
+            <a href="./AssignmentEditor/screen.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                <path
+                  d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+              </svg>
+            </a>
+          </button>
+        </div>
+      </div>
+
       <hr />
+      <div class="container">
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-secondary" data-toggle="collapse" data-target="#module1"
+            style="border-radius: 0; padding-top: 10px;padding-bottom: 10px;">Assignments</a>
+          <div id="module1" class="collapse">
 
-      <h2>ASSIGNMENTS 40% of Total       
-        <select>
-        <option>Edit</option>
-        <option>Speed Grader</option>
-        <option>Duplicate</option>
-        <option>Delete</option>
-        <option>Move To...</option>
-        <option>Send To...</option>
-        <option>Copy To...</option>
-        <option>Share to Commons</option>
-        </select>
-      </h2>
-      <ul>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A1 - ENV + HTML</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A2 - CSS + BOOTSTRAP</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A3 - JS + REACT</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A4 - STATE + REDUX</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A5 - NODE + SESSION</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">A6 - MONGO + MONGOOSE</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-      </ul>
+            <div class="list-group-item" style="padding:0;">
+              <div class="list-group-item" style="padding-left: 20px;display: flex;
+                justify-content: space-between;">
+                <div class="container">
+                  <p style="display: inline;"><b>A1 SETUP</b>
+                    <br />
+                  <p style="color: gray; display: inline;">Week 0 - SETUP - Week starting on Monday September 5th
+                    (9/5/2022) Module</p>
+                  <br />
+                  <p style="color: gray; display: inline;">Due Sep 18, 2022 at 11:59pm | 100 pts</p>
+                  </p>
+                </div>
 
-      <h2>QUIZZES 10% of Total       
-        <select>
-        <option>Edit</option>
-        <option>Speed Grader</option>
-        <option>Duplicate</option>
-        <option>Delete</option>
-        <option>Move To...</option>
-        <option>Send To...</option>
-        <option>Copy To...</option>
-        <option>Share to Commons</option>
-        </select>
-      </h2>
-      <ul>
-        <li><a href="#">Q1 - HTML</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="#">Q2 - CSS</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="#">Q3 - JS,ES6</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="#">Q4 - NODE</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="#">Q5 - MONGO</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-      </ul>
+                <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+              </div>
 
-      <h2>EXAMS 20% of Total       
-        <select>
-        <option>Edit</option>
-        <option>Speed Grader</option>
-        <option>Duplicate</option>
-        <option>Delete</option>
-        <option>Move To...</option>
-        <option>Send To...</option>
-        <option>Copy To...</option>
-        <option>Share to Commons</option>
-        </select>
-      </h2>
-      <ul>
-        <li><a href="#">Midterm</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-        <li><a href="#">Final</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-      </ul>
+              <div class="list-group-item" style="padding-left: 20px;display: flex;
+                justify-content: space-between;">
+                <div class="container">
+                  <p style="display: inline;"><b>A2 HTML</b>
+                    <br />
+                  <p style="color: gray; display: inline;">Week 1 - HTML - Week starting on Monday September 12th
+                    (9/12/2022) Module</p>
+                  <br />
+                  <p style="color: gray; display: inline;">Due Sep 2, 2022 at 11:59pm | 100 pts</p>
+                  </p>
+                </div>
+                <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+              </div>
 
-      <h2>PROJECT 30% of Total       
-        <select>
-        <option>Edit</option>
-        <option>Speed Grader</option>
-        <option>Duplicate</option>
-        <option>Delete</option>
-        <option>Move To...</option>
-        <option>Send To...</option>
-        <option>Copy To...</option>
-        <option>Share to Commons</option>
-        </select>
-      </h2>
-      <ul>
-        <li><a href="#">Project</a><br /> <a href="#">Multiple Modules</a> | Not Available yet</li>
-      </ul>
-    </td>
-  </tr>
-</table>
+              <div class="list-group-item" style="padding-left: 20px;display: flex;
+                justify-content: space-between;">
+                <div class="container">
+                  <p style="display: inline;"><b>A3 CSS</b>
+                    <br />
+                  <p style="color: gray; display: inline;">Week 2 - CSS - Week starting on Monday September 19th
+                    (9/19/2022) Module</p>
+                  <br />
+                  <p style="color: gray; display: inline;">Due Oct 2, 2022 at 11:59pm | 100 pts</p>
+                  </p>
+                </div>
+                <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+              </div>
 
+              <div class="list-group-item" style="padding-left: 20px;display: flex;
+                justify-content: space-between;">
+                <div class="container">
+                  <p style="display: inline;"><b>A4 BOOTSTRAP</b>
+                    <br />
+                  <p style="color: gray; display: inline;">Week 3 - Bootstrap - Week starting on Monday September 26th
+                    (9/26/2022) Module</p>
+                  <br />
+                  <p style="color: gray; display: inline;">Due Oct 10, 2022 at 11:59pm | 100 pts</p>
+                  </p>
+                </div>
+                <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+              </div>
+
+              <div class="list-group-item" style="padding-left: 20px;display: flex;
+                justify-content: space-between;">
+                <div class="container">
+                  <p style="display: inline;"><b>A5 JAVSCRIPT</b>
+                    <br />
+                  <p style="color: gray; display: inline;">Week 4 - Javascript - Week starting on Monday October 3rd
+                    (10/03/2022) Module</p>
+                  <br />
+                  <p style="color: gray; display: inline;">Due Oct 3, 2022 at 11:59pm | 100 pts</p>
+                  </p>
+                </div>
+                <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+              </div>
+            </div>
+
+            <div class="list-group-item" style="padding-left: 20px;display: flex;
+              justify-content: space-between;">
+              <div class="container">
+                <p style="display: inline;"><b>A6 REACT</b>
+                  <br />
+                <p style="color: gray; display: inline;">Week 5 - React - Week starting on Monday October 10th
+                  (10/10/2022) Module</p>
+                <br />
+                <p style="color: gray; display: inline;">Due Oct 23, 2022 at 11:59pm | 100 pts</p>
+                </p>
+              </div>
+              <i class="fas fa-check" style="color:green; display: flex; align-items: center;"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
