--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -1,117 +1,219 @@
-<table width="100%" border="1">
-  <tr>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Inbox</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Commons</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </td>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-        <li><a href="#">Piazza</a></li>
-        <li><a href="#">Zoom Meetings</a></li>
-        <li>
-          <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="../home/index.css">
+<script src="../home/index.js"></script>
+
+
+<div>
+
+  <div class="row" id="topBar" style="z-index: 1;">
+    <div class="col-1 logo"></div>
+    <div class="col-1"></div>
+    <div class="col-1" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
+      <i class="fas fa-bars fa-2x" style="color: red;"></i>
+    </div>
+    <div class="col-10" style="display: flex; align-items: center; ">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin-top: 3%;">
+          <li class="breadcrumb-item"><a href="#">CS5610</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Grades</li>
+        </ol>
+      </nav>
+    </div>
+
+  </div>
+  <div class="row" style="height:10%"></div>
+  <div class="row">
+    <div class="col-1" id="SideBar">
+      <ul class="list-group">
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item ">
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x" style="color: white; "></i>
+              <i class="fas fa-user fa-stack-1x" style="color: grey;"></i>
+            </span><br />
+
+            Account
+          </li>
+        </a>
+
+        <a href="../Dashboard/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-tachometer-alt fa-3x"></i>
+            Dashboard
+          </li>
+        </a>
+        <a href="../Home/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-book fa-3x"></i>
+            Courses
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-calendar fa-3x"></i>
+            Calendar
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-inbox fa-3x"></i>
+        </a>
+        Inbox
         </li>
-        <li><a href="#">Quizzes</a></li>
-        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-        <li><a href="#">People</a></li>
-        <li><a href="#">Panopto Video</a></li>
-        <li><a href="#">Discussion</a></li>
-        <li><a href="#">Announcements</a></li>
-        <li><a href="#">Pages</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Rubrics</a></li>
-        <li><a href="#">Outcomes</a></li>
-        <li><a href="#">Collaborations</a></li>
-        <li><a href="#">Syllabus</a></li>
-        <li><a href="#">Settings</a></li>
+        <li class="list-group-item">
+
+          <a href="#">
+            <i class="fas fa-history fa-3x"></i>
+
+            History
+        </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-tv fa-3x"></i>
+
+            Studio
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-arrow-right fa-3x"></i>
+            Commons
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-question-circle fa-3x"></i>
+
+            Help
+          </li>
+        </a>
       </ul>
-    </td>
-    <td valign="top">
-      <select>
-        <option>Gradebook</option>
-      </select>
-      <button>Import</button>
-      <select>
-        <option>Export</option>
-        <option>UnPublish</option>
-      </select>
-      <button>Configure</button>
-      <p></p> 
-      <table width="100%" >
-        <tbody>
-          <tr>
-            <td>
-              <h2>Student Names</h2>
-              <input
-                title="Type the name of the student to search for"
-                placeholder="Search Students"
-                style="margin-bottom: 15px"
-              />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h2>Assignment Names</h2>
-              <input 
-              placeholder="Search Assignments"
-              style="margin-bottom: 18px"/>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <button style="margin-bottom: 18px;">Apply Filters</button>
-      <table width="100%" border="1" style="white-space: nowrap; text-align: center">
-        <thead>
-          <tr>
-            <th>Student Name</th>
-            <th>A1 - HTML</th>
-            <th>A2 - CSS</th>
-            <th>A3 - JS</th>
-            <th>A4 - PHP</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Alice Wonderland</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-          </tr>
-          <tr>
-            <td>Bob Builder</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-          </tr>
-          <tr>
-            <td>Charlie Chaplin</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-          </tr>
-          <tr>
-            <td>James Bond</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-            <td>100%</td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-  </tr>
-</table>
+    </div>
+    <div class="col-1">
+
+    </div>
+    <div class="col-2" id="SubBarHome">
+      <ul>
+        <a href="../Home/screen.html">
+          <li class="list-group-item">Home</li>
+        </a>
+        <a href="../../../Courses/Modules/screen.html">
+          <li class="list-group-item">Modules</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Piazza</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Zoom Meetings</li>
+        </a>
+        <a href="../../Courses/Assignments/screen.html">
+          <li class="list-group-item">
+            Assignments
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Quizzes</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Grades</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">People</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Panopto Video</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Discussion</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Announcements</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Pages</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Files</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Rubrics</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Outcomes</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Collaborations</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Syllabus</li>
+        </a>
+        <a href="/Kanbas/Courses/Settings/screen.html">
+          <li class="list-group-item">Settings</li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-8">
+
+      <div class="row" style="display: flex; margin-top: 10px;">
+        <div class="col-5"></div>
+        <div class="col-7" style="display: flex; justify-content: flex-end;">
+          <button class="btn btn-secondary">Import</button>
+          <button class="btn btn-secondary">Export</button>
+          <button class="btn btn-secondary">
+            <i class="fas fa-cog" style="color:white"></i>
+
+          </button>
+        </div>
+
+        <div class="row" style="display: flex; margin-top: 10px;">
+          <div class="col-6">
+            <label><b>Student Names</b></label>
+            <input placeholder="Search Students" class="form-control"></input>
+          </div>
+          <div class="col-6">
+            <label><b>Assignment Names</b></label>
+            <input placeholder="Search Assignments" class="form-control"></input>
+          </div>
+        </div>
+      </div>
+
+      <button class="btn btn-secondary" style="margin:20px 0"> Apply Filter</button>
+      <div class="container mt-5">
+        <form>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th style="background-color: gray;">Student Name</th>
+                <th style="background-color: gray;">A1 SETUP</th>
+                <th style="background-color: gray;">A2 HTML</th>
+                <th style="background-color: gray;">A3 CSS</th>
+                <th style="background-color: gray;">A4 BOOTSTRAP</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><input type="text" class="form-control" name="studentName" value="Student 1"></td>
+                <td><input type="text" class="form-control" name="a1Setup" value="Grade A"></td>
+                <td><input type="text" class="form-control" name="a2Html" value="Grade B"></td>
+                <td><input type="text" class="form-control" name="a3Css" value="Grade A"></td>
+                <td><input type="text" class="form-control" name="a4Bootstrap" value="Grade B"></td>
+              </tr>
+              <!-- Add more rows for additional students -->
+            </tbody>
+          </table>
+        </form>
+      </div>
+    </div>
