--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -1,270 +1,262 @@
-<table border="1" width="100%">
-  <tr>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-        <li><a href="#">Calendar</a></li>
-        <li><a href="#">Inbox</a></li>
-        <li><a href="#">History</a></li>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Commons</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </td>
-    <td valign="top">
-      <ul>
-        <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-        <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
-        <li><a href="#">Piazza</a></li>
-        <li><a href="#">Zoom Meetings</a></li>
-        <li>
-          <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="./index.css">
+<script src="./index.js"></script>
+
+
+<div>
+
+  <div class="row" id="topBar">
+    <div class="col-1 logo"></div>
+    <div class="col-1"></div>
+    <div class="col-1" style="justify-content: flex-start; align-content: center; display:flex; flex-wrap:wrap">
+      <i class="fas fa-bars fa-2x" style="color: red;"></i>
+    </div>
+    <div class="col-10" style="display: flex; align-items: center; ">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin-top: 3%;">
+          <li class="breadcrumb-item"><a href="#">CS5610</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+      </nav>
+    </div>
+
+  </div>
+  <div class="row" style="height:10%"></div>
+  <div class="row">
+    <div class="col-1" id="SideBar">
+      <ul class="list-group">
+        <a href="../../Account/Profile/screen.html">
+          <li class="list-group-item ">
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x" style="color: white; "></i>
+              <i class="fas fa-user fa-stack-1x" style="color: grey;"></i>
+            </span><br />
+
+            Account
+          </li>
+        </a>
+
+        <a href="../Dashboard/screen.html">
+          <li class="list-group-item">
+            <i class="fas fa-tachometer-alt fa-3x"></i>
+            Dashboard
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-book fa-3x"></i>
+            Courses
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-calendar fa-3x"></i>
+            Calendar
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-inbox fa-3x"></i>
+        </a>
+        Inbox
         </li>
-        <li><a href="#">Quizzes</a></li>
-        <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-        <li><a href="#">People</a></li>
-        <li><a href="#">Panopto Video</a></li>
-        <li><a href="#">Discussion</a></li>
-        <li><a href="#">Announcements</a></li>
-        <li><a href="#">Pages</a></li>
-        <li><a href="#">Files</a></li>
-        <li><a href="#">Rubrics</a></li>
-        <li><a href="#">Outcomes</a></li>
-        <li><a href="#">Collaborations</a></li>
-        <li><a href="#">Syllabus</a></li>
-        <li><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
+        <li class="list-group-item">
+
+          <a href="#">
+            <i class="fas fa-history fa-3x"></i>
+
+            History
+        </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-tv fa-3x"></i>
+
+            Studio
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+            <i class="fas fa-arrow-right fa-3x"></i>
+            Commons
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">
+
+            <i class="fas fa-question-circle fa-3x"></i>
+
+            Help
+          </li>
+        </a>
       </ul>
-    </td>
-    <td valign="top">
-      <button>Collapse All</button>
-      <button>View Progress</button>
-      <select>
-        <option>Publish All</option>
-        <option>Publish all items and modules</option>
-        <option>UnPublish</option>
-      </select>
-      <button>+ Module</button>
+    </div>
+    <div class="col-1">
+
+    </div>
+    <div class="col-2" id="SubBarHome">
+      <ul>
+        <a href="../../Courses/Home/screen.html">
+          <li class="list-group-item">Home</li>
+        </a>
+        <a href="../../Courses/Modules/screen.html">
+          <li class="list-group-item">Modules</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Piazza</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Zoom Meetings</li>
+        </a>
+        <a href="../../Courses/Assignments/screen.html">
+          <li class="list-group-item">
+            Assignments
+          </li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Quizzes</li>
+        </a>
+        <a href="../../Courses/Grades/screen.html">
+          <li class="list-group-item">Grades</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">People</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Panopto Video</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Discussion</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Announcements</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Pages</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Files</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Rubrics</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Outcomes</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Collaborations</li>
+        </a>
+        <a href="#">
+          <li class="list-group-item">Syllabus</li>
+        </a>
+        <a href="/Kanbas/Courses/Settings/screen.html">
+          <li class="list-group-item">Settings</li>
+        </a>
+      </ul>
+    </div>
+    <div class="col-7">
+      <div style="display: flex; justify-content: flex-end; margin-top: 10px;">
+        <button class="btn btn-secondary">Collapse All</button>
+        <button class="btn btn-secondary">View Progress</button>
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Dropdown button
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Publish All</a></li>
+            <li><a class="dropdown-item" href="#">Publish all Items and Modules</a></li>
+            <li><a class="dropdown-item" href="#">Unpublish</a></li>
+          </ul>
+        </div>
+
+        <button class="btn btn-danger">+ Module</button>
+      </div>
+
       <hr />
+      <div class="container">
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-secondary" data-toggle="collapse"
+            data-target="#module1">Week 0</a>
+          <div id="module1" class="collapse">
+
+            <div class="list-group-item" style="padding:0;">
+              <div class="list-group-item" style="display: flex;
+                justify-content: space-between;">LEARNING OBJECTIVES
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+              <div class="list-group-item" style="padding-left: 50px;display: flex;
+                justify-content: space-between;">
+                Introduction to the course
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+              <div class="list-group-item" style="padding-left: 50px; display: flex;
+                justify-content: space-between;">
+                Learn what is Web Development
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+              <div class="list-group-item" style="padding-left: 50px; display: flex;
+                justify-content: space-between;">
+                Creating a development environment
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+              <div class="list-group-item" style="padding-left: 50px;display: flex;
+                justify-content: space-between;">
+                Creating a Web Application
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+              <div class="list-group-item" style="padding-left: 50px;display: flex;
+                justify-content: space-between;">
+                Getting started whith the 1st assignments
+                <i class="fas fa-check" style="color:green;"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-2">
+      <h3 class="profileHeader">Course Status</h3>
+      <button class="btn btn-secondary">Unpublish</button>
+      <button class="btn btn-secondary">Published</button>
+      <div style="padding-right:20px">
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-secondary">Import Existing Content</a>
+          <a href="#" class="list-group-item list-group-item-secondary">Import From Commons</a>
+          <a href="#" class="list-group-item list-group-item-secondary">Choose Home Page</a>
+          <a href="#" class="list-group-item list-group-item-secondary">View Course Stream</a>
+          <a href="#" class="list-group-item list-group-item-secondary">New Announcement</a>
+          <a href="#" class="list-group-item list-group-item-secondary">New Analytics</a>
+        </div>
+
+
+      </div>
+      <h3 class="profileHeader">Comming Up</h3>
+      <a href="#">View Calendar</a>
       <ul>
-        <li>
-          Week 0
-          <ul>
-            <li>
-              LEARNING OBJECTIVES
-              <ul>
-                <li>Introduction to the course</li>
-                <li>Learn what is Web Development</li>
-                <li>Creating a development environment</li>
-                <li>Creating a Web Application</li>
-                <li>Getting started whith the 1st assignments</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              READING
-              <ul>
-                <li>Full Stack Developer - Chapter 1 - Introduction</li>
-                <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              SLIDES
-              <ul>
-                <li><a href="#">Introduction to Web Development Links to an external site.</a></li>
-                <li><a href="#">Creating an HTTP server with Node.js Links to an external site.</a></li>
-                <li><a href="#">Creating a React Application Links to an external site.</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Week 1
-          <ul>
-            <li>
-              LEARNING OBJECTIVES
-              <ul>
-                <li>Learn how to create user interfaces with HTML</li>
-                <li>Keep working on assignment 1</li>
-                <li>Deploy the assignment to Netlify</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              READING
-              <ul>
-                <li>Full Stack Developer - Chapter 1 - Introduction</li>
-                <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              SLIDES
-              <ul>
-                <li><a href="#">Introduction to HTML and the DOM</a></li>
-                <li><a href="#">Formatting Web content with Headings and Paragraphs</a></li>
-                <li><a href="#">Formatting content with Lists and Tables</a></li>
-                <li><a href="#">Creating Web Forms </a></li>
-                <li><a href="#">Navigating with Anchors</a></li>
-                <li><a href="#">Embedding content with Iframes</a></li>
-                <li><a href="#">Drawing with Scalable Vector Graphics</a></li>
-                <li><a href="#">HTML - all the slides above</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Week 2
-          <ul>
-            <li>
-              LEARNING OBJECTIVES
-              <ul>
-                <li>Introduction to CSS</li>
-                <li>Selectors by tag ID, classes, and document structure</li>
-                <li>Styling color and background color</li>
-                <li>Styling dimensions and positions</li>
-                <li>The box model - styling margins, borders, and paddings</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              READING
-              <ul>
-                <li>Full Stack Developer - Chapter 3 - Styling User Interfaces With Cascading Style Sheets</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              SLIDES
-              <ul>
-                <li><a href="#">
-                  Introduction to Cascading Style Sheets</a></li>
-                <li><a href="#">
-                  Styling with Colors </a></li>
-                <li><a href="#">
-                  The Box Model </a></li>
-                <li><a href="#">Size & Position  </a></li>
-                <li><a href="#">
-                  Float</a></li>
-                <li><a href="#">Rotating content & Gradient background </a></li>
-                <li><a href="#">
-                  Flex</a></li>
-                <li><a href="#">CSS - all slides above</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Week 3
-          <ul>
-            <li>
-              LEARNING OBJECTIVES
-              <ul>
-                <li>CSS Libraries: Bootstrap, Tailwind</li>
-                <li>Float and grid systems</li>
-                <li>Media queries and responsive design</li>
-                <li>Laying out content with Flex</li>
-                <li>Final Project Requirements</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              READING
-              <ul>
-                <li>Full Stack Developer - Chapter 4 - Styling Web Pages With The Bootstrap CSS Library</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              SLIDES
-              <ul>
-                <li><a href="#">Introduction to Bootstrap</a></li>
-                <li><a href="#">Grid System  </a></li>
-                <li><a href="#">Bootstrap Navigation</a></li>
-                <li><a href="#">Bootstrap Navbar   </a></li>
-                <li><a href="#">Bootstrap Tables</a></li>
-                <li><a href="#">Bootstrap Forms</a></li>
-                <li><a href="#">Showing and Hiding Content with Bootstrap</a></li>
-                <li><a href="#">Miscellaneous Bootstrap Styles</a></li>
-                <li><a href="#">Fontawesome </a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Week 4
-          <ul>
-            <li>
-              LEARNING OBJECTIVES
-              <ul>
-                <li>Introduction to the course</li>
-                <li>Introduction to the course website</li>
-                <li>Introduction to the course tools</li>
-                <li>Introduction to the course assignments</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              READING
-              <ul>
-                <li>Full Stack Developer - Chapter 5 - Creating Single Page Applications With React.Js</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              SLIDES
-              <ul>
-                <li><a href="#">Introduction to JavaScript</a></li>
-                <li><a href="#">ES6 Variables and Functions</a></li>
-                <li><a href="#">ES6 Arrays and Strings</a></li>
-                <li><a href="#">ES6 Object and Array Destructing</a></li>
-                <li><a href="#"> ES6 Modules and Classes</a></li>
-                <li><a href="#">ES6 New Features</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        </li>
-      </ul>
-    </td>
-    <td valign="top">
-      <h2>Course Status</h1>
-      <button>Unpublish</button>
-      <button>Published</button>
-      <ul>
-        <li><a href="#">Import Existing Content</a></li>
-        <li><a href="#">Import From Commons</a></li>
-        <li><a href="#">Choose Home Page</a></li>
-        <li><a href="#">View Course Stream</a></li>
-        <li><a href="#"> New Announcement</a></li>
-        <li><a href="#">New Analytics</a></li>
-        <li><a href="#">View Course Notification</a></li>
-      </ul>
-      <h2>Comming Up</h1>
-        <a href="#">View Calendar</a>
-        <ul>
-          <li><a href="#">Lecture
+        <li class="list-group-item" style="margin-top: 10px; margin-bottom: 10px;"><a href="#">Lecture
             CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
             Sep 7 at 11:45am</a></li>
-          <li><a href="#">Lecture
+        <li class="list-group-item" style="margin-top: 10px; margin-bottom: 10px;"><a href="#">Lecture
             CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
             Sep 11 at 11:45am</a></li>
-          <li><a href="#">CS5610 06 SP23 Lecture
+        <li class="list-group-item" style="margin-top: 10px; margin-bottom: 10px;"><a href="#">CS5610 06 SP23 Lecture
             CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
             Sep 11 at 6pm</a></li>
-        </ul>
-    </td>
-  </tr>
-</table>
+      </ul>
+    </div>
+  </div>
+</div>
